[gd_scene load_steps=14 format=3 uid="uid://ig6ukabxwwgl"]

[ext_resource type="Script" uid="uid://cyumv6ilutkyr" path="res://scenes/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://dqfesnusjaxnr" path="res://art/menu.png" id="2_wu84c"]
[ext_resource type="Texture2D" uid="uid://c263qrdnyvjnu" path="res://art/menu_buttons.png" id="4_8ln24"]
[ext_resource type="AudioStream" uid="uid://dt1ih83d6kvnp" path="res://sound/music/titlescreenloop_v1_wrappedloop.ogg" id="4_wu84c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("4_8ln24")
region_rect = Rect2(242, 603, 414, 124)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ln24"]
texture = ExtResource("4_8ln24")
region_rect = Rect2(242, 262, 414, 124)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rtw2f"]
texture = ExtResource("4_8ln24")
region_rect = Rect2(55, 737, 390, 144)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oa1go"]
texture = ExtResource("4_8ln24")
region_rect = Rect2(55, 396, 390, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu84c"]
atlas = ExtResource("4_8ln24")
region = Rect2(302, 78, 124, 104)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tbmy8"]
texture = SubResource("AtlasTexture_wu84c")

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1qb"]
atlas = ExtResource("4_8ln24")
region = Rect2(467, 78, 124, 104)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5dd4i"]
texture = SubResource("AtlasTexture_jk1qb")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.792157, 0.698039, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wu84c")
expand_mode = 3

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 108.0
offset_right = 544.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ekxnf")

[node name="Start" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.5
offset_right = 167.5
offset_bottom = 93.0
grow_horizontal = 2
theme_override_colors/font_hover_pressed_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_hover_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_outline_color = Color(0.721569, 0.329412, 0.321569, 1)
theme_override_colors/font_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_focus_color = Color(1, 0.541176, 0.541176, 1)
theme_override_colors/font_pressed_color = Color(1, 0.541176, 0.541176, 1)
theme_override_constants/outline_size = 21
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/hover = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8ln24")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_8ln24")
theme_override_styles/normal = SubResource("StyleBoxTexture_8ln24")
text = "Start"

[node name="Options" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -93.0
offset_right = 336.0
offset_bottom = 7.0
grow_vertical = 0
theme_override_colors/font_hover_pressed_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_hover_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_outline_color = Color(0.721569, 0.329412, 0.321569, 1)
theme_override_colors/font_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_focus_color = Color(1, 0.541176, 0.541176, 1)
theme_override_colors/font_pressed_color = Color(1, 0.541176, 0.541176, 1)
theme_override_constants/outline_size = 21
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxTexture_rtw2f")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_rtw2f")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_rtw2f")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_rtw2f")
theme_override_styles/hover = SubResource("StyleBoxTexture_rtw2f")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8ln24")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_oa1go")
theme_override_styles/normal = SubResource("StyleBoxTexture_oa1go")
text = "Options"

[node name="Credits" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -334.0
offset_top = -93.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_hover_pressed_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_hover_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_outline_color = Color(0.721569, 0.329412, 0.321569, 1)
theme_override_colors/font_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_focus_color = Color(1, 0.541176, 0.541176, 1)
theme_override_colors/font_pressed_color = Color(1, 0.541176, 0.541176, 1)
theme_override_constants/outline_size = 21
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/hover = SubResource("StyleBoxTexture_wu84c")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8ln24")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_8ln24")
theme_override_styles/normal = SubResource("StyleBoxTexture_8ln24")
text = "Credits"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wu84c")
autoplay = true
panning_strength = 0.0
bus = &"Music"

[node name="Reload" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_top = 17.0
offset_right = -19.0
offset_bottom = 87.0
grow_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxTexture_tbmy8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_tbmy8")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_tbmy8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_tbmy8")
theme_override_styles/hover = SubResource("StyleBoxTexture_tbmy8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_tbmy8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tbmy8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_5dd4i")
theme_override_styles/normal = SubResource("StyleBoxTexture_5dd4i")

[connection signal="pressed" from="Panel/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Reload" to="." method="_on_reload_pressed"]
